# mcp-fmi

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  fig.html  fmu.py  fmu_tests  main.py  pyproject.toml  server.py
.github/workflows/: publish.yml
dev/: figure_dash.py  input_gen.py  simulation_and_visualization copy.py  simulation_and_visualization.py
fmus/: LOC.fmu  LOC.md
src/: fmu_utils.py
src/mcp_fmi/: server.py
src/mcp_fmu/: artifacts.py  inputs.py  schema.py  server.py  simulation.py
static/fmus/: BouncingBall.md  TankSystem.ssp
tests/: test_server.py
