[project]
name = "mcp-fmu"
version = "0.0.1"
description = "Unofficial integration of fmpy with mcp."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash>=3.0.4",
    "mcp[cli]>=1.9.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]

[project.scripts]
start-server = "mcp_fmu.server:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-ra -q"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project.dependencies]
mcp-fmu = { path = ".", develop = true }
